fix webhook serialization bug
